; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote.c_remote_xfer_memory.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_remote.c_remote_xfer_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_attrib = type { i32 }
%struct.target_ops = type { i32 }

@current_gdbarch = common dso_local global i32 0, align 4
@current_regcache = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32, i32, %struct.mem_attrib*, %struct.target_ops*)* @remote_xfer_memory to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @remote_xfer_memory(i32 %0, i8* %1, i32 %2, i32 %3, %struct.mem_attrib* %4, %struct.target_ops* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.mem_attrib*, align 8
  %13 = alloca %struct.target_ops*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  store i32 %0, i32* %8, align 4
  store i8* %1, i8** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store %struct.mem_attrib* %4, %struct.mem_attrib** %12, align 8
  store %struct.target_ops* %5, %struct.target_ops** %13, align 8
  %17 = load i32, i32* @current_gdbarch, align 4
  %18 = load i32, i32* @current_regcache, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @gdbarch_remote_translate_xfer_address(i32 %17, i32 %18, i32 %19, i32 %20, i32* %14, i32* %15)
  %22 = load i32, i32* %15, align 4
  %23 = icmp sle i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %40

25:                                               ; preds = %6
  %26 = load i32, i32* %11, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %25
  %29 = load i32, i32* %14, align 4
  %30 = load i8*, i8** %9, align 8
  %31 = load i32, i32* %15, align 4
  %32 = call i32 @remote_write_bytes(i32 %29, i8* %30, i32 %31)
  store i32 %32, i32* %16, align 4
  br label %38

33:                                               ; preds = %25
  %34 = load i32, i32* %14, align 4
  %35 = load i8*, i8** %9, align 8
  %36 = load i32, i32* %15, align 4
  %37 = call i32 @remote_read_bytes(i32 %34, i8* %35, i32 %36)
  store i32 %37, i32* %16, align 4
  br label %38

38:                                               ; preds = %33, %28
  %39 = load i32, i32* %16, align 4
  store i32 %39, i32* %7, align 4
  br label %40

40:                                               ; preds = %38, %24
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

declare dso_local i32 @gdbarch_remote_translate_xfer_address(i32, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @remote_write_bytes(i32, i8*, i32) #1

declare dso_local i32 @remote_read_bytes(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
